Definiendo un valor máximo para el gráfico.

--- a/barras-ddah/novus-nvd3-f74b4de/examples/multiBarChart.html
+++ b/barras-ddah/novus-nvd3-f74b4de/examples/multiBarChart.html
@@ -120,6 +120,7 @@ nv.addGraph(function() {
 
     chart.yAxis
         .tickFormat(d3.format('.0f'));
+    chart.forceY([0,100]);
 
     d3.select('#chart1 svg')
         .datum(test_data)
