Creando carpeta para graficos de ddah.

--- a/barras-discurso/novus-nvd3-f74b4de/examples/multiBarChart.html
+++ b/barras-discurso/novus-nvd3-f74b4de/examples/multiBarChart.html
@@ -54,8 +54,8 @@ var test_data = [
         { x : "Salud", y : 40 },
         { x : "Vivienda", y : 30 },
         { x : "Educación",   y : 20 }, 
-        { x : "Seguridad",   y : 10 },
-        { x : "Modernización del Estado",   y : 2.9 } 
+        { x : "Vivienda y urb.",   y : 10 },
+        { x : "Modern. del Eº",   y : 2.9 } 
       ]
   },
   {
@@ -67,8 +67,8 @@ var test_data = [
         { x : "Vivienda", y : 50 },
         { x : "Salud", y : 60 },
         { x : "Educación",   y : 70 }, 
-        { x : "Seguridad",   y : 20 },
-        { x : "Modernización del Estado",   y : 10 } 
+        { x : "Vivienda y urb.",   y : 20 },
+        { x : "Modern. del Eº",   y : 10 } 
       ]
   },
   {
@@ -80,8 +80,8 @@ var test_data = [
         { x : "Vivienda", y : 23 },
         { x : "Salud", y : 46 },
         { x : "Educación",   y : 18 }, 
-        { x : "Seguridad",   y : 97 },
-        { x : "Modernización del Estado",   y : 20 } 
+        { x : "Vivienda y urb.",   y : 97 },
+        { x : "Modern. del Eº",   y : 20 } 
       ]
   }
 ]
